--- a/servidor/springboot/geanuncio1/src/main/resources/application.properties
+++ b/servidor/springboot/geanuncio1/src/main/resources/application.properties
@@ -10,10 +10,10 @@ spring.jpa.show-sql=true
 # Hibernate Specific properties
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=validate
 
 #Executa o arquivo data.sql
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
